# nornir_mcp

./: .gitignore  .mcp.json  CLAUDE.md  README.md  config.yaml  example.mcp.json  get_facts.py  main.py  nornir_tools.py  pyproject.toml
lab/: cisco.clab.yaml
src/nornir_mcp/: __init__.py  constants.py  health_monitor.py  helpers.py  main.py  mcp_app.py  mcp_server.py  nornir_init.py  nornir_tools.py  resources.py  result.py  supported_getters.json  tools.py  types.py  utils.py
src/nornir_mcp/data/: __init__.py  capabilities.yaml
src/nornir_mcp/runners/: __init__.py  base_runner.py  napalm_runner.py  netmiko_runner.py  paramiko_runner.py  registry.py
tests/: __init__.py  conftest.py  repro_issues.py  test_base_runner.py  test_napalm_runner.py  test_netmiko_runner.py  test_nornir_init.py  test_paramiko_runner.py  test_registry.py  test_tools.py
