[project]
name = "nornir-mcp"
version = "0.1.0"
description = "MCP server for Nornir network automation, enabling LLMs to interact with network devices"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14.2",
    "nornir>=3.5.0",
    "nornir-napalm>=0.5.0",
    "nornir-utils>=0.2.0",
]
