[project]
name = "nornir-mcp"
version = "0.1.0"
description = "MCP server for Nornir network automation, enabling LLMs to interact with network devices"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["fastmcp>=2.14.2", "nornir>=3.5.0", "nornir-napalm>=0.5.0"]

[project.scripts]
nornir-mcp = "nornir_mcp.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nornir_mcp = ["data/*.yaml"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
