[project]
name = "nornir-mcp"
version = "0.1.0"
description = "MCP server for Nornir network automation, enabling LLMs to interact with network devices"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14.2",
    "nornir>=3.5.0",
    "nornir-napalm>=0.5.0",
    "nornir-netmiko>=1.0.1",
    "nornir-paramiko>=0.3.0",
    "paramiko>=2.7,<3.0",
]

[project.scripts]
nornir-mcp = "nornir_mcp.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nornir_mcp = ["data/*.yaml"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.2",
    "ruff>=0.9.10",
]

[tool.ruff]
# Exclude a few common directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Set the maximum line length
line-length = 110

# Add the flake8-assertions plugin
[tool.ruff.lint]
select = ["E", "W", "F", "I", "S", "B", "C9", "UP", "PL", "PT"]
ignore = [
    "PT011",  # Use of `pytest.raises()` with multiple statements
]
extend-ignore = [
    # Allow assert in tests
    "S101",  # Use of assert detected
    "PLW0603",  # Global statement is discouraged (needed for singleton pattern)
    "B024",  # Allow ABC without abstract methods for BaseRunner design
]

[tool.ruff.lint.per-file-ignores]
# Allow asserts in test files
"tests/**/*" = ["S101"]
